# keyflow

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CHORD_SYLLABLE_INTEGRATION.md  Cargo.toml  HANDOFF-NOTATION.md  HANDOFF.md  Justfile  README.md  VISION.md  cliff.toml  clippy.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/engraver/: Cargo.toml
crates/engraver-proto/: Cargo.toml
crates/engraver-proto/src/: lib.rs
crates/engraver-proto/src/api/: mod.rs
crates/engraver-proto/src/engraver/: derive_aliases.rs  mod.rs
crates/engraver/src/: lib.rs
crates/keyflow/: Cargo.toml
crates/keyflow-chordpro/: Cargo.toml
crates/keyflow-chordpro/src/: ast.rs  lib.rs  parser.rs  tests.rs
crates/keyflow-cli/: Cargo.toml
crates/keyflow-cli/src/: docs.rs  main.rs  orchestra.rs  sync.rs
crates/keyflow-daw-analysis/: Cargo.toml
crates/keyflow-daw-analysis/src/: backend.rs  lib.rs  service.rs  types.rs
crates/keyflow-live/: Cargo.toml
crates/keyflow-live/src/: lib.rs
crates/keyflow-lsp/: Cargo.toml  README.md
crates/keyflow-lsp/editors/vscode-keyflow/: extension.js  language-configuration.json  package.json
crates/keyflow-lsp/src/: main.rs
crates/keyflow-midi/: Cargo.toml
crates/keyflow-midi/examples/: dump_notes.rs  inspect_midi_tracks.rs  inspect_section_measure.rs
crates/keyflow-midi/src/: lib.rs
crates/keyflow-midi/src/guide/: click_scheduler.rs  count_in_pattern.rs  generator.rs  mod.rs  section_cue_scheduler.rs
crates/keyflow-midi/src/import/: midi_chart_builder.rs  midi_import.rs  mod.rs  pitch.rs
crates/keyflow-midi/tests/: midi_song_bennie_and_the_jets.rs  midi_song_cryin_mateus_asato.rs  midi_song_for_cryin_out_loud.rs  musicxml_midi_harmony.rs  snapshot_harness.rs
crates/keyflow-midi/tests/support/: mod.rs
crates/keyflow-musicxml/: Cargo.toml
crates/keyflow-musicxml/examples/: dump_lotf.rs
crates/keyflow-musicxml/src/: convert.rs  lib.rs
crates/keyflow-orchestra/: Cargo.toml
crates/keyflow-orchestra/examples/: dump.rs
crates/keyflow-orchestra/src/: analysis.rs  config.rs  lib.rs  mirror.rs  profile.rs
crates/keyflow-orchestra/src/engine/: mod.rs  shaping.rs
crates/keyflow-orchestra/src/score/: mod.rs  parse.rs
crates/keyflow-orchestra/tests/: corpus.rs  lua_parity.rs  mirror_parity.rs
crates/keyflow-proto/: Cargo.toml  README.md
crates/keyflow-proto/examples/: vienna.kf  vienna_alignment.rs  vienna_full_example.rs  vienna_lyrics_test.rs  vienna_manual_alignment.rs
crates/keyflow-proto/src/: lib.rs
crates/keyflow-proto/src/api/: mod.rs
crates/keyflow-sync/: Cargo.toml  README.md
crates/keyflow-sync/src/: audio.rs  bench.rs  error.rs  karaoke.rs  lanes.rs  lib.rs  models.rs  onnx_util.rs  pipeline.rs  timing.rs  whisper.rs
crates/keyflow-syntax/: Cargo.toml
crates/keyflow-syntax/src/: lib.rs
crates/keyflow-text/: Cargo.toml
crates/keyflow-text/src/: lib.rs
crates/keyflow-ui/: Cargo.toml  MIGRATION_FTS_UI.md
crates/keyflow-ui/examples/: headless_perf.rs
crates/keyflow-ui/src/: catalog.rs  chart_graphics.rs  chart_renderer.rs  examples.rs  lib.rs  signals.rs
crates/keyflow/examples/: svg_smoke.rs
crates/keyflow/src/: daw_module.rs  error.rs  lib.rs
crates/keyflow/tests/: 001_basic_structure.rs  002_basic_chords.rs  003_key_change.rs  004_chord_memory.rs  005_duration_test.rs  006_chord_duration_test.rs  007_push_syntax.rs  008_text_cues.rs  009_absolute_positions.rs  010_new_features_test.rs  011_dynamic_markings.rs  012_tempo_changes.rs  013_melody_system.rs  014_track_system.rs  015_measure_expressions.rs  016_push_triplets.rs  017_rhythm_notation.rs  018_visual_rhythm.rs  019_measure_width_consistency.rs  020_horizontal_spacing_diagnostic.rs  021_midi_import_thriller.rs  022_midi_import_thriller_v3.rs  024_midi_import_movin_out.rs  025_lyrics_integration.rs  026_rpp_import.rs  027_stop_signs.rs  028_feature_showcase.rs  029_melody_pitch.rs
examples/web-editor/: Cargo.toml  Dioxus.toml
examples/web-editor/assets/: web-editor.css
examples/web-editor/src/: main.rs
keyflow/: Cargo.toml
keyflow-proto/: Cargo.toml
keyflow-proto/src/: lib.rs
keyflow-proto/src/api/: mod.rs
keyflow-proto/src/ast/: span.rs
keyflow-proto/src/chart/: chart.rs  commands.rs  cues.rs  display.rs  macro.rs  measure.rs  melody.rs  memory.rs  mod.rs  position.rs  rhythm.rs  semantic_role.rs  settings.rs  templates.rs  types.rs
keyflow-proto/src/chord/: definition.rs  degree.rs  detail_level.rs  duration.rs  extensions.rs  family.rs  midi.rs  normalization.rs  quality.rs  root.rs  semitone_sequence.rs  timing.rs  transposition.rs
keyflow-proto/src/core/: mod.rs
keyflow-proto/src/highlighting/: highlighter.rs  mod.rs  theme.rs
keyflow-proto/src/key/: definition.rs  mod.rs  spelling.rs
keyflow-proto/src/metadata/: parser.rs
keyflow-proto/src/parsing/: mod.rs  span.rs
keyflow-proto/src/primitives/: accidental.rs  mod.rs  roman_numeral.rs  tokens.rs
keyflow-proto/src/sections/: colors.rs  measure_expr.rs  mod.rs  section.rs  section_type.rs
keyflow-proto/src/services/: mod.rs
keyflow-proto/src/time/: duration.rs
keyflow-ui/: Cargo.toml
keyflow-ui/src/: chart_renderer.rs  examples.rs  lib.rs  signals.rs
keyflow-ui/src/layouts/: chart_editor.rs  mod.rs
keyflow-ui/src/panels/: chart_view.rs  mod.rs  preview_panel.rs  render_stats.rs
keyflow/src/: error.rs  lib.rs
keyflow/src/patterns/: examples.rs
keyflow/tests/: 001_basic_structure.rs  002_basic_chords.rs  003_key_change.rs  004_chord_memory.rs  005_duration_test.rs  006_chord_duration_test.rs  007_push_syntax.rs  008_text_cues.rs  009_absolute_positions.rs  010_new_features_test.rs  011_dynamic_markings.rs  012_tempo_changes.rs  013_melody_system.rs  014_track_system.rs  015_measure_expressions.rs  016_push_triplets.rs  017_rhythm_notation.rs  018_visual_rhythm.rs  019_measure_width_consistency.rs  020_horizontal_spacing_diagnostic.rs  021_midi_import_thriller.rs  022_midi_import_thriller_v3.rs
keyflow/tests/midi/: Broadview - Slow Pulp.mid  Cryin' - Mateus Asato.mid  For Cryin' Out Loud - FINNEAS.mid  readme.md
(+451 files in other folders)
