[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unused = "allow"

[workspace.lints.clippy]
# Permissive stylistic lints — WIP workspace, don't block CI on these.
field_reassign_with_default = "allow"
redundant_closure = "allow"
nonminimal_bool = "allow"
clone_on_copy = "allow"
useless_vec = "allow"
large_enum_variant = "allow"
if_same_then_else = "allow"
explicit_counter_loop = "allow"
manual_strip = "allow"
too_many_arguments = "allow"
double_must_use = "allow"
manual_clamp = "allow"
vec_init_then_push = "allow"
collapsible_match = "allow"
filter_next = "allow"

[workspace.dependencies]
# Public crates (facade + UI)
keyflow = { path = "crates/keyflow" }
keyflow-ui = { path = "crates/keyflow-ui" }
engraver = { path = "crates/engraver" }

# FastTrack Studio shared design system. Lives in the sibling fts-ui repo.
fts-ui = { git = "https://git.starcommand.live/FastTrackStudios/fts-ui.git", branch = "main", package = "fts-ui" }

# Facet reflection — align the stack to the current 0.46 line.
facet = { version = "0.46" }
facet-core = { version = "0.46" }
facet-format = { version = "0.47" }
facet-json = { version = "0.46" }
facet-postcard = { version = "0.46" }
facet-pretty = { version = "0.46" }
facet-value = { version = "0.46" }
facet-yaml = { version = "0.46" }

# VOX service framework. Aligned with daw + architect on the bearcove
# upstream rev so the FTS workspace ships a single vox copy.
vox = { git = "https://github.com/bearcove/vox", rev = "27eef573efd388bddaad0befdd59143a7e98b830" }
vox-types = { git = "https://github.com/bearcove/vox", rev = "27eef573efd388bddaad0befdd59143a7e98b830" }
vox-stream = { git = "https://github.com/bearcove/vox", rev = "27eef573efd388bddaad0befdd59143a7e98b830" }

# architect framework — defines #[architect::rpc] for sync-trait → vox
# RPC bridging. Path dep onto local checkout, matching daw's setup.
architect = { git = "https://git.starcommand.live/FastTrackStudios/architect.git", branch = "main" }
architect-rpc-derive = { git = "https://git.starcommand.live/FastTrackStudios/architect.git", branch = "main" }

# Rendering
anyrender = { git = "https://github.com/DioxusLabs/anyrender.git", branch = "main" }
anyrender_vello = { git = "https://github.com/DioxusLabs/anyrender.git", branch = "main" }
anyrender_vello_hybrid = { git = "https://github.com/DioxusLabs/anyrender.git", branch = "main" }
vello_hybrid = "0.0.6"
vello_common = "0.0.6"
peniko = "0.6"
kurbo = "0.13"

# UI
dioxus-native = "0.7.1"

# Sibling repos
# `daw-module`/`daw-proto`/`dawfile-reaper` are internal type-only crates.
# Pre-keyflow-daw-analysis, daw-reaper depended on keyflow for chord
# detection, which closed a cycle if keyflow used the `daw` facade. That
# dep was lifted (daw 11c6062 + keyflow-daw-analysis here), so keyflow
# could now use `daw` — but for purely type/trait imports the internal
# crates are still the lighter choice.
daw-module = { git = "https://git.starcommand.live/FastTrackStudios/daw.git", branch = "main" }
daw-proto = { git = "https://git.starcommand.live/FastTrackStudios/daw.git", branch = "main" }
dawfile-reaper = { git = "https://git.starcommand.live/FastTrackStudios/daw.git", branch = "main" }
# Full daw facade — needed by `keyflow-daw-analysis` only.
daw = { git = "https://git.starcommand.live/FastTrackStudios/daw.git", branch = "main" }
keyflow-daw-analysis = { path = "crates/keyflow-daw-analysis" }
color-palette = { git = "https://git.starcommand.live/FastTrackStudios/dynamic-template.git", branch = "main" }
music-catalog = { git = "https://git.starcommand.live/FastTrackStudios/dynamic-template.git", branch = "main" }
session = { git = "https://git.starcommand.live/FastTrackStudios/session.git", branch = "main" }
session-ui = { git = "https://git.starcommand.live/FastTrackStudios/session.git", branch = "main" }
dock-dioxus = { git = "https://git.starcommand.live/FastTrackStudios/dock-dioxus.git", branch = "main" }
dock-proto = { git = "https://git.starcommand.live/FastTrackStudios/dock-dioxus.git", branch = "main" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["std"] }

# MusicXML parsing — full MusicXML 4.0 spec, supports .musicxml and .mxl.
musicxml = "1.1"

keyflow-musicxml = { path = "crates/keyflow-musicxml" }

# ── Patched dioxus ───────────────────────────────────────────────────
# keyflow pulls daw (with reaper features → daw-reaper-dioxus → patched
# dioxus) and fts-ui, so the whole workspace must share daw's dioxus fork.
# These lines are copied verbatim from daw's [patch.crates-io].
[patch.crates-io]
dioxus = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus" }
dioxus-asset-resolver = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-asset-resolver" }
dioxus-cli-config = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-cli-config" }
dioxus-config-macros = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-config-macros" }
dioxus-core = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-core" }
dioxus-core-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-core-macro" }
dioxus-core-types = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-core-types" }
dioxus-devtools = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-devtools" }
dioxus-devtools-types = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-devtools-types" }
dioxus-document = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-document" }
dioxus-history = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-history" }
dioxus-hooks = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-hooks" }
dioxus-html = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-html" }
dioxus-html-internal-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-html-internal-macro" }
dioxus-rsx = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-rsx" }
dioxus-signals = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-signals" }
dioxus-stores = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-stores" }
dioxus-stores-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-stores-macro" }
generational-box = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "generational-box" }
manganis = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "manganis" }
manganis-core = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "manganis-core" }
manganis-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "manganis-macro" }
