[workspace]
members = ["crates/*", "xtask", "examples/web-editor"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unused = "warn"

[workspace.lints.clippy]
# Permissive stylistic lints — WIP workspace, don't block CI on these.
field_reassign_with_default = "allow"
redundant_closure = "allow"
nonminimal_bool = "allow"
clone_on_copy = "allow"
useless_vec = "allow"
large_enum_variant = "allow"
if_same_then_else = "allow"
explicit_counter_loop = "allow"
manual_strip = "allow"
too_many_arguments = "allow"
double_must_use = "allow"
manual_clamp = "allow"
vec_init_then_push = "allow"
collapsible_match = "allow"
filter_next = "allow"

[workspace.dependencies]
# Public crates (facade + UI)
keyflow = { path = "crates/keyflow" }
keyflow-ui = { path = "crates/keyflow-ui" }
engraver = { path = "crates/engraver" }

# The standalone Editor (CodeMirror-style contenteditable editor) lives in
# its own repo at ../../Editor and is shared with Task. `editor` is the
# umbrella widget; `editor-keyflow-lang` maps keyflow highlighting + IDE
# diagnostics onto the editor's decoration model; `editor-keyflow` renders
# `.kf` fences to inline SVG. Web/wasm only for now — the contenteditable
# view doesn't run on dioxus-native/Blitz yet.
editor = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }
editor-state = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }
editor-keyflow = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }
editor-keyflow-lang = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }

# FastTrack Studio shared design system. Lives in the sibling fts-ui repo.
fts-ui = { git = "https://git.starcommand.live/FastTrackStudios/fts-ui.git", branch = "main", package = "fts-ui" }

# Facet reflection — align the stack to the current 0.46 line.
facet = { version = "0.46" }
facet-core = { version = "0.46" }
facet-format = { version = "0.47" }
facet-json = { version = "0.46" }
facet-postcard = { version = "0.46" }
facet-pretty = { version = "0.46" }
facet-value = { version = "0.46" }
facet-yaml = { version = "0.46" }

# VOX service framework. Pinned to the starcommand fork @ f31f1040 (vox
# 0.8.2) — the rev `architect` (local path below) uses, and the one whose
# tokio deps are `#[cfg(not(wasm))]`-gated so the editor builds for wasm.
# The `[patch."https://github.com/bearcove/vox"]` block below folds every
# transitive bearcove/vox reference onto this same rev.
vox = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-types = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-stream = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }

# architect framework — defines #[architect::rpc] for sync-trait → vox RPC
# bridging. Local path (matching Task) so architect's vox-0.8.2 / runtime-
# only profile drives the whole graph and the wasm build stays mio-free.
architect = { git = "https://codeberg.org/FastTrackStudios/architect.git", branch = "main" }
architect-rpc-derive = { git = "https://codeberg.org/FastTrackStudios/architect.git", branch = "main" }

# Rendering
anyrender = { git = "https://github.com/DioxusLabs/anyrender.git", branch = "main" }
anyrender_vello = { git = "https://github.com/DioxusLabs/anyrender.git", branch = "main" }
anyrender_vello_hybrid = { git = "https://github.com/DioxusLabs/anyrender.git", branch = "main" }
vello_hybrid = "0.0.6"
vello_common = "0.0.6"
peniko = "0.6"
kurbo = "0.13"

# UI
dioxus-native = "0.7.1"

# Sibling repos
# `daw-module`/`daw-proto`/`dawfile-reaper` are internal type-only crates.
# Pre-keyflow-daw-analysis, daw-reaper depended on keyflow for chord
# detection, which closed a cycle if keyflow used the `daw` facade. That
# dep was lifted (daw 11c6062 + keyflow-daw-analysis here), so keyflow
# could now use `daw` — but for purely type/trait imports the internal
# crates are still the lighter choice.
daw-module = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
daw-proto = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
dawfile-reaper = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
# Full daw facade — needed by `keyflow-daw-analysis` only.
daw = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
keyflow-daw-analysis = { path = "crates/keyflow-daw-analysis" }
color-palette = { git = "https://codeberg.org/FastTrackStudios/dynamic-template.git", branch = "main" }
music-catalog = { git = "https://codeberg.org/FastTrackStudios/dynamic-template.git", branch = "main" }
session = { git = "https://codeberg.org/FastTrackStudios/session.git", branch = "main" }
session-ui = { git = "https://codeberg.org/FastTrackStudios/session.git", branch = "main" }
dock-dioxus = { git = "https://codeberg.org/FastTrackStudios/dock-dioxus.git", branch = "main" }
dock-proto = { git = "https://codeberg.org/FastTrackStudios/dock-dioxus.git", branch = "main" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["std"] }

# MusicXML parsing — full MusicXML 4.0 spec, supports .musicxml and .mxl.
musicxml = "1.1"

keyflow-musicxml = { path = "crates/keyflow-musicxml" }

# ── Patched dioxus ───────────────────────────────────────────────────
# keyflow pulls daw (with reaper features → daw-reaper-dioxus → patched
# dioxus) and fts-ui, so the whole workspace must share daw's dioxus fork.
# These lines are copied verbatim from daw's [patch.crates-io].
[patch.crates-io]
dioxus = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus" }
dioxus-asset-resolver = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-asset-resolver" }
dioxus-cli-config = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-cli-config" }
dioxus-config-macros = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-config-macros" }
dioxus-core = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-core" }
dioxus-core-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-core-macro" }
dioxus-core-types = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-core-types" }
dioxus-devtools = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-devtools" }
dioxus-devtools-types = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-devtools-types" }
dioxus-document = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-document" }
dioxus-history = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-history" }
dioxus-hooks = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-hooks" }
dioxus-html = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-html" }
dioxus-html-internal-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-html-internal-macro" }
dioxus-rsx = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-rsx" }
dioxus-signals = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-signals" }
dioxus-stores = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-stores" }
dioxus-stores-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "dioxus-stores-macro" }
generational-box = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "generational-box" }
manganis = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "manganis" }
manganis-core = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "manganis-core" }
manganis-macro = { git = "https://git.starcommand.live/codywright/dioxus", rev = "32d9f5154fa9124b05be73b82e8b04fe717a730f", package = "manganis-macro" }

# Vendored mermaid-rs-renderer fork (web-time for wasm32) lives in the Editor
# repo and backs editor-mermaid. `[patch]` only applies from the build-root
# workspace, so keyflow carries it too even though Editor declares it
# internally — without this, editor-mermaid pulls upstream 0.2.2 which panics
# on wasm32.
mermaid-rs-renderer = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }

# ── Editor wasm dependency unification ───────────────────────────────
# The Editor (via editor-keyflow → engraver → keyflow-proto → daw-proto)
# reaches the vox RPC stack. Without these patches keyflow's graph carries
# THREE conflicting vox copies (bearcove / Codys-Wright / starcommand) and
# the wrong daw-proto profile, which pulls vox's full tokio-net transport →
# `mio`, which can't build for `wasm32`. These mirror Task's working web
# build verbatim (paths adapted to keyflow's location): they fold every vox
# reference onto the single starcommand fork and point daw-proto + actions-
# proto at their local checkouts so daw-proto's runtime-only (wasm-friendly)
# vox profile applies. See Task/Cargo.toml for the original rationale.
[patch."https://github.com/FastTrackStudios/input_actions.git"]
actions-proto = { git = "https://codeberg.org/FastTrackStudios/input_actions.git", branch = "main" }

[patch."https://git.starcommand.live/FastTrackStudios/input_actions.git"]
actions-proto = { git = "https://codeberg.org/FastTrackStudios/input_actions.git", branch = "main" }

# Fold every transitive vox reference (bearcove + Codys-Wright) onto the single
# FastTrackStudios fork @ f31f1040 (vox 0.8.2, the Uuid-opaque-scalar fork
# architect+Task pin) so the graph carries exactly one vox — architect's
# generated Handler impls only unify across one vox-types. The crate list is the
# union daw/session/input_actions reference.
[patch."https://github.com/bearcove/vox"]
vox                = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-core           = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-ffi            = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-jit            = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-jit-abi        = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-jit-cal        = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-macros-core    = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-macros-parse   = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-postcard       = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-schema         = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-service-macros = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-stream         = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-types          = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-websocket      = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
facet-cbor         = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }

[patch."https://github.com/Codys-Wright/vox.git"]
vox                = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-core           = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-ffi            = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-jit            = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-jit-abi        = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-jit-cal        = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-macros-core    = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-macros-parse   = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-postcard       = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-schema         = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-service-macros = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-stream         = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-types          = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
vox-websocket      = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }
facet-cbor         = { git = "https://git.starcommand.live/FastTrackStudios/vox", rev = "f31f10400c245740a072fa61bb96ef3a3fc2bd93" }

# Redirect every transitive bearcove/moire reference onto the FastTrackStudios
# moire fork @ 7a2f1dc — the rev daw/session pair with the FTS vox fork (avoids
# duplicate moire-runtime #[ctor] registrations).
[patch."https://github.com/bearcove/moire"]
moire             = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-macros-noop = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-runtime     = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-tokio       = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-trace-capture = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-trace-types = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-types       = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-wasm        = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-wire        = { git = "https://git.starcommand.live/FastTrackStudios/moire.git", rev = "7a2f1dc" }

# ── Build profiles ───────────────────────────────────────────────────
# A debug wasm build (`dx serve`) leaves dependencies at opt-level 0, which
# leaves the engraver's large layout functions with so many locals that
# walrus (dx's wasm post-processor) rejects the module ("too many locals:
# locals exceed maximum"). Optimizing dependencies fixes it; our own crates
# stay at opt-level 1 for fast incremental rebuilds. Profiles only apply from
# the build-root workspace, so this must live here (not in ../../Editor).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
