[workspace]
members = ["crates/*", "xtask", "examples/web-editor"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unused = "warn"

[workspace.lints.clippy]
# Permissive stylistic lints — WIP workspace, don't block CI on these.
field_reassign_with_default = "allow"
redundant_closure = "allow"
nonminimal_bool = "allow"
clone_on_copy = "allow"
useless_vec = "allow"
large_enum_variant = "allow"
if_same_then_else = "allow"
explicit_counter_loop = "allow"
manual_strip = "allow"
too_many_arguments = "allow"
double_must_use = "allow"
manual_clamp = "allow"
vec_init_then_push = "allow"
collapsible_match = "allow"
filter_next = "allow"

[workspace.dependencies]
# Public crates (facade + UI)
keyflow = { path = "crates/keyflow" }
keyflow-ui = { path = "crates/keyflow-ui" }
engraver = { path = "crates/engraver" }

# The standalone Editor (CodeMirror-style contenteditable editor) lives in
# its own repo at ../../Editor and is shared with Task. `editor` is the
# umbrella widget; `editor-keyflow-lang` maps keyflow highlighting + IDE
# diagnostics onto the editor's decoration model; `editor-keyflow` renders
# `.kf` fences to inline SVG. Web/wasm only for now — the contenteditable
# view doesn't run on dioxus-native/Blitz yet.
editor = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }
editor-state = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }
editor-keyflow = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }
editor-keyflow-lang = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }

# FastTrack Studio shared design system. Lives in the sibling fts-ui repo.
fts-ui = { git = "https://codeberg.org/FastTrackStudios/fts-ui.git", branch = "main", package = "fts-ui" }

# Facet reflection — 0.50 line (paired across the FTS stack; see daw).
facet = { version = "0.50.0-rc.1" }
facet-core = { version = "0.50.0-rc.1" }
facet-format = { version = "0.50.0-rc.1" }
facet-json = { version = "0.50.0-rc.1" }
facet-postcard = { version = "0.50.0-rc.1" }
facet-pretty = { version = "0.50.0-rc.1" }
facet-value = { version = "0.50.0-rc.1" }

# VOX service framework — consumed from crates.io (upstream facet/vox
# monorepo), 0.10 line paired with facet 0.50.
vox = { version = "0.10.0-rc.1", default-features = false, features = ["runtime"] }
vox-types = { version = "0.10.0-rc.1" }
vox-stream = { version = "0.10.0-rc.1" }

# architect framework — defines #[architect::rpc] for sync-trait → vox RPC
# bridging. Codeberg main; path-patched to the local migrated checkout below.
architect = { git = "https://codeberg.org/FastTrackStudios/architect.git", branch = "main" }
architect-rpc-derive = { git = "https://codeberg.org/FastTrackStudios/architect.git", branch = "main" }

# Rendering
anyrender = "0.10"
anyrender_vello = "0.10.1"
anyrender_vello_hybrid = "0.5.1"
vello_hybrid = "0.0.6"
vello_common = "0.0.6"
peniko = "0.6"
kurbo = "0.13"

# UI
# 0.7.9 line — the 0.8-alpha widget system (blitz custom widgets, anyrender
# 0.10 pairing) waits for a stable 0.8; bumping it requires the whole FTS
# component stack (fts-ui, dock-dioxus, session-ui) to move together.
dioxus-native = "0.7.9"

# Sibling repos
# `daw-module`/`daw-proto`/`dawfile-reaper` are internal type-only crates.
# Pre-keyflow-daw-analysis, daw-reaper depended on keyflow for chord
# detection, which closed a cycle if keyflow used the `daw` facade. That
# dep was lifted (daw 11c6062 + keyflow-daw-analysis here), so keyflow
# could now use `daw` — but for purely type/trait imports the internal
# crates are still the lighter choice.
daw-module = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
daw-proto = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
dawfile-reaper = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
# Full daw facade — needed by `keyflow-daw-analysis` only.
daw = { git = "https://codeberg.org/FastTrackStudios/daw.git", branch = "main" }
keyflow-daw-analysis = { path = "crates/keyflow-daw-analysis" }
color-palette = { git = "https://codeberg.org/FastTrackStudios/dynamic-template.git", branch = "main" }
music-catalog = { git = "https://codeberg.org/FastTrackStudios/dynamic-template.git", branch = "main" }
session = { git = "https://codeberg.org/FastTrackStudios/session.git", branch = "main" }
session-ui = { git = "https://codeberg.org/FastTrackStudios/session.git", branch = "main" }
dock-dioxus = { git = "https://codeberg.org/FastTrackStudios/dock-dioxus.git", branch = "main" }
dock-proto = { git = "https://codeberg.org/FastTrackStudios/dock-dioxus.git", branch = "main" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["std"] }

# MusicXML parsing — full MusicXML 4.0 spec, supports .musicxml and .mxl.
musicxml = "1.1"

keyflow-musicxml = { path = "crates/keyflow-musicxml" }

[patch.crates-io]
# Vendored mermaid-rs-renderer fork (web-time for wasm32) lives in the Editor
# repo and backs editor-mermaid. `[patch]` only applies from the build-root
# workspace, so keyflow carries it too even though Editor declares it
# internally — without this, editor-mermaid pulls upstream 0.2.2 which panics
# on wasm32.
mermaid-rs-renderer = { git = "https://codeberg.org/FastTrackStudios/Editor.git", branch = "main" }

# moire from crates.io (pulled by daw's migrated crates) folded onto the FTS
# fork rev the github patch below also uses — one moire copy graph-wide.
moire = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-macros-noop = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-runtime = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-tokio = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-trace-capture = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-trace-types = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-types = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-wasm = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-wire = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }

# Editor/session git-deps reference keyflow.git itself; before this repo's
# migration landed on codeberg main that dragged a pre-migration (facet 0.46)
# keyflow copy into the graph, so we fold it onto this workspace's crates.
# Self-referential but harmless once main carries the migration — kept so a
# checkout mid-history still resolves one keyflow graph-wide.
[patch."https://codeberg.org/FastTrackStudios/keyflow.git"]
keyflow = { path = "crates/keyflow" }
keyflow-proto = { path = "crates/keyflow-proto" }
keyflow-text = { path = "crates/keyflow-text" }
keyflow-midi = { path = "crates/keyflow-midi" }
keyflow-syntax = { path = "crates/keyflow-syntax" }
keyflow-chordpro = { path = "crates/keyflow-chordpro" }
keyflow-daw-analysis = { path = "crates/keyflow-daw-analysis" }
engraver = { path = "crates/engraver" }
engraver-proto = { path = "crates/engraver-proto" }

# Some transitive deps still reference input_actions by its old github URL;
# fold those onto the codeberg main copy.
[patch."https://github.com/FastTrackStudios/input_actions.git"]
actions-proto = { git = "https://codeberg.org/FastTrackStudios/input_actions.git", branch = "main" }

# Redirect every transitive bearcove/moire reference onto the FastTrackStudios
# moire fork @ 7a2f1dc — the rev daw/session pair with the FTS vox fork (avoids
# duplicate moire-runtime #[ctor] registrations).
[patch."https://github.com/bearcove/moire"]
moire             = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-macros-noop = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-runtime     = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-tokio       = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-trace-capture = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-trace-types = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-types       = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-wasm        = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }
moire-wire        = { git = "https://codeberg.org/FastTrackStudios/moire.git", rev = "7a2f1dc" }

# ── Build profiles ───────────────────────────────────────────────────
# A debug wasm build (`dx serve`) leaves dependencies at opt-level 0, which
# leaves the engraver's large layout functions with so many locals that
# walrus (dx's wasm post-processor) rejects the module ("too many locals:
# locals exceed maximum"). Optimizing dependencies fixes it; our own crates
# stay at opt-level 1 for fast incremental rebuilds. Profiles only apply from
# the build-root workspace, so this must live here (not in ../../Editor).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
