[package]
name = "keyflow-proto"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde"]
highlighting = []

[dependencies]
facet.workspace = true
thiserror.workspace = true
roam.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
daw-control = { path = "../../daw/daw-control" }
color-palette = { path = "../../../crates/color/color-palette" }
uuid = { version = "1", features = ["v4", "serde"] }
helgoboss-midi = "0.4.0"

[dev-dependencies]
keyflow-text = { path = "../keyflow-text" }

[lints]
workspace = true
